# f30_eth_adapter

./: .gitmodules  CMakeLists.txt  connect.zsh  debug.txt  partitions.csv  sdkconfig  sdkconfig.old
components/esp_eth_console/: CMakeLists.txt  Kconfig.projbuild  eth_console.c  eth_console.h  eth_console_vfs.cpp  eth_console_vfs.h
components/ethernet_init/: CMakeLists.txt  Kconfig.projbuild  eth_mdns_init.c  eth_mdns_init.h  ethernet_init.c  ethernet_init.h  idf_component.yml
components/macros/: macros.h
components/meter_web_server/: CMakeLists.txt  meter_web_server.cpp  meter_web_server.h  root.html
components/my_modbus/: CMakeLists.txt  idf_component.yml  modbus_params.h  tcp_slave.c  tcp_slave.h
main/: CMakeLists.txt  Kconfig.projbuild  dbg_console.cpp  dbg_console.h  esp_linenoise_shim.c  esp_linenoise_shim.h  f30.cpp  f30.h  idf_component.yml  main.cpp  modbus.cpp  modbus.h  my_hal.cpp  my_hal.h  params.cpp  params.h
